Integrate codecov.io with tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,13 @@ envlist = py{35,36,37}
 recreate = True
 
 [testenv]
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 deps =
     flake8
     pytest
+    pytest-cov
+    codecov
 commands =
     flake8 pscp
-    pytest tests.py
+    pytest tests.py --cov=pscp
+    codecov -e TOXENV
