Add tests.py to flake8
Add --cov to Makefile pytest

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,6 @@ deps =
     pytest-cov
     codecov
 commands =
-    flake8 pscp
+    flake8 pscp tests.py
     pytest tests.py --cov=pscp
     codecov -e TOXENV
